# smart_city_iot_hub

./: README.md
infra/: Pulumi.yaml  __main__.py  pyproject.toml
infra/src/: event_hub.py
smart_city_data_producers/: file_path  pyproject.toml  transforming_json_df.py
smart_city_data_producers/producers/: population.py
